Refactoring use case